--- a/blog_app-fronted/package.json
+++ b/blog_app-fronted/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.5.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
