--- a/blog_app-fronted/package.json
+++ b/blog_app-fronted/package.json
@@ -15,6 +15,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.6",
     "axios": "^1.5.0",
+    "clipboard-copy": "^4.0.1",
+    "dompurify": "^3.0.6",
+    "jodit-react": "^1.3.39",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,7 +25,9 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1"
+    "react-share": "^4.4.1",
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
