--- a/blog_app-fronted/package.json
+++ b/blog_app-fronted/package.json
@@ -19,6 +19,7 @@
     "dompurify": "^3.0.6",
     "jodit-react": "^1.3.39",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -27,7 +28,8 @@
     "react-router-dom": "^6.16.0",
     "react-share": "^4.4.1",
     "redux": "^4.2.1",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "string-strip-html": "^13.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
